Contact page and background edits

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,11 @@ html {
   overflow: hidden;
   color: white;
 }
+body {
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+}
 
 @font-face {
   font-family: as;
