--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,12 @@
-html {
-  background-color: white;
-  font-family: as;
-  font-size: 5em;
-  overflow: hidden;
-  color: white;
-}
 body {
   padding: 0;
   margin: 0;
   height: 100vh;
+  background-color: white;
+  font-family: as;
+  font-size: 5em;
+  overflow: hidden;
+  color: lightcyan;
 }
 
 @font-face {
