--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,11 @@
 body {
   padding: 0;
   margin: 0;
+  font-weight: 90;
   height: 100vh;
   background-color: white;
   font-family: as;
-  font-size: 2em;
+  font-size: 1.5em;
   overflow: hidden;
   color: lightcyan;
 }
@@ -14,6 +15,14 @@ body {
   font-weight: 90;
   font-style: normal;
   src: url("../fonts/AUTHENTICSans-90.woff2") format("woff2");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: as;
+  font-weight: 150;
+  font-style: normal;
+  src: url("../fonts/AUTHENTICSans-150.woff2") format("woff2");
   font-display: swap;
 }
 
