--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,14 @@ body {
   color: lightcyan;
 }
 
+a:visited {
+  color: black;
+}
+
+a:active {
+  color:lightcyan;
+}
+
 @font-face {
   font-family: as;
   font-weight: 90;
@@ -32,4 +40,41 @@ body {
   z-index: 2;
   position: relative;
   top: 10em;
+}
+
+.st0-1 {
+  animation: asd 30s linear infinite;
+  transform-origin: 70% 50%;
+}
+
+.st1 {
+  animation: asd 30s linear infinite;
+  transform-origin: 60% 80%;
+}
+
+.st2 {
+  animation: asd 30s linear infinite;
+  transform-origin: 50% 70%;
+}
+
+.st3 {
+  animation: asd 30s linear infinite;
+  transform-origin: 40% 80%;
+}
+
+.st4 {
+  animation: asd 30s linear infinite;
+  transform-origin: 70% 80%;
+}
+
+@keyframes asd {
+  0% {
+    transform: scaleX(1);
+  }
+  50% {
+    transform: scaleX(-1);
+  }
+  100% {
+    transform: scaleX(1);
+  }
 }
