--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,17 +4,25 @@ body {
   height: 100vh;
   background-color: white;
   font-family: as;
-  font-size: 2em;
+  font-size: 1.5em;
   overflow: hidden;
-  color: lightcyan;
-}
-
-a:visited {
   color: black;
 }
 
+a {
+  color: #00B9F4;
+}
+
+a:visited {
+  color: #00B9F4;
+}
+
 a:active {
-  color:lightcyan;
+  color: white;
+}
+
+svg {
+  overflow: visible;
 }
 
 @font-face {
@@ -42,39 +50,39 @@ a:active {
   top: 10em;
 }
 
-.st0-1 {
-  animation: asd 30s linear infinite;
-  transform-origin: 70% 50%;
+.st01 {
+  animation: asd 55s linear infinite;
+  transform-origin: 70% 70%;
 }
 
 .st1 {
-  animation: asd 30s linear infinite;
+  animation: asd 45s linear infinite;
   transform-origin: 60% 80%;
 }
 
 .st2 {
-  animation: asd 30s linear infinite;
+  animation: asd 35s linear infinite;
   transform-origin: 50% 70%;
 }
 
 .st3 {
-  animation: asd 30s linear infinite;
+  animation: asd 50s linear infinite;
   transform-origin: 40% 80%;
 }
 
 .st4 {
-  animation: asd 30s linear infinite;
-  transform-origin: 70% 80%;
+  animation: asd 40s linear infinite;
+  transform-origin: 50% 80%;
 }
 
 @keyframes asd {
   0% {
-    transform: scaleX(1);
+    transform: scaleX(1) scaleY(1) rotate(0);
   }
   50% {
-    transform: scaleX(-1);
+    transform: scaleX(-2) scaleY(2) rotate(10deg);
   }
   100% {
-    transform: scaleX(1);
+    transform: scaleX(1) scaleY(1) rotate(0);
   }
 }
