--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,21 +4,28 @@ body {
   height: 100vh;
   background-color: white;
   font-family: as;
-  font-size: 1.5em;
+  font-size: 1.2em;
   overflow: hidden;
-  color: black;
+  color: white;
 }
 
-a {
+a:link {
   color: #00B9F4;
+  text-decoration: none;
 }
 
 a:visited {
   color: #00B9F4;
 }
 
+a:hover {
+  color: #00B9F4;
+  filter: blur(3px);
+}
+
 a:active {
-  color: white;
+  color: #00B9F4;
+  filter: blur(3px);
 }
 
 svg {
