--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,7 +53,7 @@ a:active {
 @font-face {
   font-family: asd;
   font-style: normal;
-  src: url("../fonts/946Latin-Regular4.woff2") format("woff2");
+  src: url("../fonts/946Latin-Regular2R.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -68,9 +68,14 @@ a:active {
 }
 
 .shapes {
-  z-index: 2;
+  z-index: 4;
   position: relative;
   top: 3em;
+  opacity: 90%;
+}
+
+.yolo {
+  filter: blur(0.5px);
 }
 
 .st01 {
@@ -119,6 +124,31 @@ a:active {
   transform-origin: 90% 90%;
 }
 
+.st8 {
+  animation: asd 50s linear infinite;
+  transform-origin: 35% 60%;
+}
+
+.st9 {
+  animation: asd 45s linear infinite;
+  transform-origin: 50% 70%;
+}
+
+.st10 {
+  animation: asd 40s linear infinite;
+  transform-origin: 90% 90%;
+}
+
+.st11 {
+  animation: asd 25s linear infinite;
+  transform-origin: 90% 80%;
+}
+
+.st12 {
+  animation: asd 55s linear infinite;
+  transform-origin: 60% 90%;
+}
+
 @keyframes asd {
   0% {
     transform: rotate(0) translateY(0);
@@ -131,17 +161,5 @@ a:active {
   100% {
     transform: rotate(0);
     background-position: 0% 50%;
-  }
-}
-
-@keyframes asd2 {
-  0% {
-    transform: scaleX(1) scaleY(1) rotate(0);
-  }
-  50% {
-    transform: scaleX(-2) scaleY(2) rotate(10deg);
-  }
-  100% {
-    transform: scaleX(1) scaleY(1) rotate(0);
   }
 }
