--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -86,6 +86,27 @@ a:visited {
   top: 3em;
 }
 
+.weed {
+  z-index: 2;
+  position: relative;
+  top: 1.5em;
+  left: 0em;
+  max-height: 1vh;
+  max-width: 1vw;
+}
+
+.ewan {
+  position: absolute;
+  z-index: 3;
+  user-select: none;
+  color: green;
+}
+
+.weedsvg {
+  animation: asdasd 6s linear infinite;
+  transform-origin: 50% 50%;
+}
+
 .shapes-svg {
   filter: blur(0.1px);
   overflow: visible;
@@ -174,5 +195,17 @@ a:visited {
   100% {
     transform: rotate(0);
     background-position: 0% 50%;
+  }
+}
+
+@keyframes asdasd {
+  0% {
+    transform: scale(0.9) ;
+  }
+  50% {
+    transform: scale(0.75);
+  }
+  100% {
+    transform: scale(0.9);
   }
 }
